# linear-regression

./: pyproject.toml  regression.ipynb
